added bottom border for clearer separation of cards

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       rel="icon"
       href="https://jwright2021.github.io/workingPortfolio/images/myIcon.png"
     />
-    <!-- <link
+    <link
       type="text/css"
       rel="stylesheet"
       href="https://jwright2021.github.io/workingPortfolio/styles/homepage.css"
@@ -15,11 +15,11 @@
     <script
       src="https://jwright2021.github.io/workingPortfolio/scripts/homepage.js"
       defer
-    ></script> -->
+    ></script>
     <!-- Local development -->
-    <link rel="icon" href="images/myIcon.png" />
+    <!-- <link rel="icon" href="images/myIcon.png" />
     <link type="text/css" rel="stylesheet" href="styles/homepage.css" />
-    <script src="scripts/homepage.js" defer></script>
+    <script src="scripts/homepage.js" defer></script> -->
     <title>Jenna Wright</title>
   </head>
   <body>
