added js function to add career cards

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
       defer
     ></script>
     <!-- Local development -->
-    <!-- <link rel="icon" href="images/myIcon.png" />
-    <link type="text/css" rel="stylesheet" href="styles/homepage.css" />
+    <!-- <link type="text/css" rel="stylesheet" href="styles/homepage.css" />
     <script src="scripts/homepage.js" defer></script> -->
     <title>Jenna Wright</title>
   </head>
@@ -47,107 +46,7 @@
       </header>
       <page>
         <h3 id="Career">Career</h3>
-        <div class="career-resume">
-          <div id="careerInjection"></div>
-        </div>
-        <div class="career-resume">
-          <div class="career-card">
-            <div class="timeline">
-              <div class="date">Jan. 2022 - Jun. 2024</div>
-              <div class="length">2.5 Years</div>
-            </div>
-            <div class="skills-card">
-              <div class="stackSkill">JavaScript</div>
-              <div class="stackSkill">Typescript</div>
-              <div class="stackSkill">Vue</div>
-              <div class="stackSkill">React</div>
-              <div class="stackSkill">Storybook</div>
-            </div>
-            <div class="job-card">
-              <div class="job-title">Software Engineer ♦ Lumen Learning</div>
-              <div class="job-description">
-                Primarily worked on the Frontend implementing designs into code
-                for reusable functions and features in Vue and React across
-                multiple products. Worked closely with cross-function teams,
-                developers, back end, designers, product managers to implement
-                new designs. Made new greenfield product for use with internal
-                CMS systems.
-              </div>
-            </div>
-          </div>
-          <div class="career-card">
-            <div class="timeline">
-              <div class="date">Dec. 2020 - Jan. 2022</div>
-              <div class="length">2 Years</div>
-            </div>
-            <div class="skills-card">
-              <div class="stackSkill">JavaScript</div>
-              <div class="stackSkill">Java</div>
-              <div class="stackSkill">AngularJS</div>
-              <div class="stackSkill">Cypress</div>
-              <div class="stackSkill">JUnit</div>
-            </div>
-            <div class="job-card">
-              <div class="job-title">Applications Engineer ♦ Vanguard</div>
-              <div class="job-description">
-                Primarily worked as a Full Stack developer maintaining legacy
-                codes. Followed the Agile/Lean methodology. Analyzed and
-                identified areas for test automation by implementing stories.
-              </div>
-            </div>
-          </div>
-          <div class="career-card">
-            <div class="timeline">
-              <div class="date">Apr. 2020 - Nov. 2020</div>
-              <div class="length">8 Months</div>
-            </div>
-            <div class="skills-card">
-              <div class="stackSkill">Salesforce</div>
-              <div class="stackSkill">MongoDB</div>
-              <div class="stackSkill">Express</div>
-              <div class="stackSkill">AngularJS</div>
-              <div class="stackSkill">NodeJS</div>
-            </div>
-            <div class="job-card">
-              <div class="job-title">Salesforce Developer ♦ Vanguard</div>
-              <div class="job-description">
-                Analyzed and identified areas for improvement to organization's
-                Salesforce Security Model. Worked with internal international
-                teams to determine and configure desired Salesforce interaction.
-                During this time I mentored and advised an IT intern project
-                team that used MEAN stack structure for an internal application
-                development.
-              </div>
-            </div>
-          </div>
-          <div class="career-card">
-            <div class="timeline">
-              <div class="date">Jul. 2019 - Mar. 2020</div>
-              <div class="length">8 Months</div>
-            </div>
-            <div class="skills-card">
-              <div class="stackSkill">HTML</div>
-              <div class="stackSkill">CSS</div>
-              <div class="stackSkill">JavaScript</div>
-              <div class="stackSkill">Public Speaking</div>
-              <div class="stackSkill">Project Planning</div>
-            </div>
-            <div class="job-card">
-              <div class="job-title">
-                Technology Leadership Program ♦ Vanguard
-              </div>
-              <div class="job-description">
-                Leadership focused training in Technology. Highly focused
-                technical development training in full stack development, web
-                accessibility, and implemented a prototype internal application
-                for company wide usage. Engaged in specialized training to
-                develop business and leadership abilities including but not
-                limited to: project presentation, business negotiations, public
-                speaking, interpersonal skills, and project planning.
-              </div>
-            </div>
-          </div>
-        </div>
+        <div id="careerInjection"></div>
         <h3>Education</h3>
         <p>
           Graduated May 2019 with a B.A. in Computer Science from Gettysburg
