--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Landing page of Jenna Wright's Portfolio."
+    />
     <link
       rel="icon"
       href="https://jwright2021.github.io/workingPortfolio/images/myIcon.png"
