refactored code to create entire page base in javascript, and pass initial lighthouse check

--- a/index.html
+++ b/index.html
@@ -42,35 +42,6 @@
         <li><a class="headNav" href="#About">About</a></li>
       </ul>
     </nav>
-    <div class="main">
-      <header>
-        <h1>Jenna Wright</h1>
-        <h2>Software Engineer</h2>
-        <p>&#128204; Coding since 2019 from PA, USA &#128204;</p>
-      </header>
-      <page>
-        <h3 id="Career">Career</h3>
-        <div id="careerInjection"></div>
-        <h3>Education</h3>
-        <p>
-          Graduated May 2019 with a B.A. in Computer Science from Gettysburg
-          College.
-        </p>
-        <h3 id="Portfolio">My Portfolio</h3>
-        <a
-          class="paper-kawaii-button"
-          href="https://jwright2021.github.io/workingPortfolio/pages/paper-kawaii.html"
-          >Paper Kawaii Reproduction</a
-        >
-        <p>
-          This is a re-imagined take on Paper Kawaii. I like origami and have
-          followed this site for a lot of tutorials; so I figured it'd be fun to
-          make a sample interface based on it.
-        </p>
-        <h3 id="About">About Me</h3>
-        <div id="aboutInjection"></div>
-        <a class="button-go-to-top" href="#top">Go to top</a>
-      </page>
-    </div>
+    <div id="baseInjection"></div>
   </body>
 </html>
