reduce button css redundancy

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <a id="top"></a>
-    <nav class="navigation-links">
+    <nav class="navigation-links" role="navigation">
       <label class="logo"
         ><img
           src="https://jwright2021.github.io/workingPortfolio/images/myIcon.png"
