--- a/pages/categories.html
+++ b/pages/categories.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Jenna Wright's re-imagined production of Paper Kawaii website. Category page."
+    />
     <link
       rel="icon"
       href="https://jwright2021.github.io/workingPortfolio/images/origami-cropped-favicon-1.png"
