quick lighthouse fix

--- a/pages/shop.html
+++ b/pages/shop.html
@@ -73,16 +73,17 @@
           <div class="book-image">
             <img
               src="https://jwright2021.github.io/workingPortfolio/images/kawaii-origami-book-paper-kawaii-08-440x440-1.jpg"
+              alt="kawaii-origami-book-image"
             />
           </div>
           <div class="book-description">
             <h3>
               Kawaii Origami - Super Cute Origami Projects for Easy Folding Fun
             </h3>
-            <a>
+            <p>
               Grab a copy of my new origami book, with over 25 cute origami
               projects as well as a pack of 50 origami papers.
-            </a>
+            </p>
             <div class="origami-book-buttons">
               <button class="origami-buttons">More Info</button>
               <button class="origami-buttons">Buy Now</button>
