fixed some lighthouse points

--- a/pages/about.html
+++ b/pages/about.html
@@ -42,97 +42,99 @@
         </div>
       </div>
     </nav>
-    <div id="logoInjection"></div>
-    <div class="page-container">
-      <div class="page-width">
-        <div class="from-the-author">
-          <h1>All About Paper Kawaii</h1>
-          <p>
-            This website contains many (300+) origami and paper craft tutorials.
-            Whether you are a dedicated origami folder, or maybe you need to
-            find some handmade gift ideas, craft to sell in your stores or gift
-            boxes for presents, this is a great place to find all of these
-            things.
-          </p>
-          <p>
-            Please use the menu at the top, tutorials are predominantly sorted
-            into categories. You can also view just the video tutorials or the
-            photo tutorials separately. If looking for a specific model, use the
-            search bar, which is at the very top or in the right sidebar (on
-            desktop computers). There is also a
-            <a
-              href="https://www.paperkawaii.com/origami-photo-tutorials/"
-              aria-label="Photo tutorials"
-              target="_blank"
-              >data archive</a
-            >
-            and
-            <a
-              href="https://www.paperkawaii.com/origami-photo-tutorials/"
-              aria-label="Photo tutorials"
-              target="_blank"
-              >category list</a
-            >.
-          </p>
-          <p>
-            Paper Kawaii now has an online shop! The shop is currently selling
-            origami ebooks, origami diagrams, printable origami paper, craft
-            templates, and vector patterns. There are many free items available
-            too, so why not
-            <a
-              href="https://www.paperkawaii.com/origami-photo-tutorials/"
-              aria-label="Photo tutorials"
-              target="_blank"
-              >check it out here</a
-            >.
-          </p>
-          <p>
-            You can get a free pack of printable origami paper by being part of
-            Paper Kawaii’s Newsletter! You will receive post updates and a
-            monthly newsletter. Sign up below!
-          </p>
-          <h3>From The Author: Chrissy Pushkin</h3>
-          <p>
-            This website has been created so that I can teach you how to make
-            origami – the Japanese art of paper folding. The word Origami is a
-            Japanese word – 折り, which is the combination of the words Ori 折り
-            – to fold and Kami 紙 – which means paper. As well as some
-            traditional models, I try my best to make tutorials for more unique
-            and original designs. Coming up with new origami designs is
-            something I really enjoy doing in my spare time.
-          </p>
-          <p>
-            The origami instructions are often video tutorials, because I find
-            that it is the easiest way to learn origami and for me to teach it
-            to you. You will find lots of tutorials on how to make paper boxes,
-            bows, envelopes, mini books, flowers, butterflies, Japanese
-            characters like Totoro and Hello Kitty, there are simple
-            instructions for beginners and challenging designs for advanced
-            folders too.
-          </p>
-          <h3>Who Runs Paper Kawaii?</h3>
-          <p>
-            Hi there! I’m Chrissy and I live in Australia. Since a young age, I
-            have enjoyed making origami and paper craft projects.
-          </p>
-          <p>
-            Back in 2008 I started posting every now and then just as a small
-            hobby, now many years later it has become more of an enjoyable full
-            time occupation.
-          </p>
-          <p>
-            My day job is graphic designer / web designer / video editor. Seeing
-            people post photos of origami/crafts they have made after following
-            one of my tutorials is rewarding and motivating. If you have made
-            something from a tutorial, please feel free to tag me (@paperkawaii)
-            on instagram or twitter.
-          </p>
+    <div class="main" role="main">
+      <div id="logoInjection"></div>
+      <div class="page-container">
+        <div class="page-width">
+          <div class="from-the-author">
+            <h1>All About Paper Kawaii</h1>
+            <p>
+              This website contains many (300+) origami and paper craft
+              tutorials. Whether you are a dedicated origami folder, or maybe
+              you need to find some handmade gift ideas, craft to sell in your
+              stores or gift boxes for presents, this is a great place to find
+              all of these things.
+            </p>
+            <p>
+              Please use the menu at the top, tutorials are predominantly sorted
+              into categories. You can also view just the video tutorials or the
+              photo tutorials separately. If looking for a specific model, use
+              the search bar, which is at the very top or in the right sidebar
+              (on desktop computers). There is also a
+              <a
+                href="https://www.paperkawaii.com/origami-photo-tutorials/"
+                aria-label="Photo tutorials"
+                target="_blank"
+                >data archive</a
+              >
+              and
+              <a
+                href="https://www.paperkawaii.com/origami-photo-tutorials/"
+                aria-label="Photo tutorials"
+                target="_blank"
+                >category list</a
+              >.
+            </p>
+            <p>
+              Paper Kawaii now has an online shop! The shop is currently selling
+              origami ebooks, origami diagrams, printable origami paper, craft
+              templates, and vector patterns. There are many free items
+              available too, so why not
+              <a
+                href="https://www.paperkawaii.com/origami-photo-tutorials/"
+                aria-label="Photo tutorials"
+                target="_blank"
+                >check it out here</a
+              >.
+            </p>
+            <p>
+              You can get a free pack of printable origami paper by being part
+              of Paper Kawaii’s Newsletter! You will receive post updates and a
+              monthly newsletter. Sign up below!
+            </p>
+            <h3>From The Author: Chrissy Pushkin</h3>
+            <p>
+              This website has been created so that I can teach you how to make
+              origami – the Japanese art of paper folding. The word Origami is a
+              Japanese word – 折り, which is the combination of the words Ori
+              折り – to fold and Kami 紙 – which means paper. As well as some
+              traditional models, I try my best to make tutorials for more
+              unique and original designs. Coming up with new origami designs is
+              something I really enjoy doing in my spare time.
+            </p>
+            <p>
+              The origami instructions are often video tutorials, because I find
+              that it is the easiest way to learn origami and for me to teach it
+              to you. You will find lots of tutorials on how to make paper
+              boxes, bows, envelopes, mini books, flowers, butterflies, Japanese
+              characters like Totoro and Hello Kitty, there are simple
+              instructions for beginners and challenging designs for advanced
+              folders too.
+            </p>
+            <h3>Who Runs Paper Kawaii?</h3>
+            <p>
+              Hi there! I’m Chrissy and I live in Australia. Since a young age,
+              I have enjoyed making origami and paper craft projects.
+            </p>
+            <p>
+              Back in 2008 I started posting every now and then just as a small
+              hobby, now many years later it has become more of an enjoyable
+              full time occupation.
+            </p>
+            <p>
+              My day job is graphic designer / web designer / video editor.
+              Seeing people post photos of origami/crafts they have made after
+              following one of my tutorials is rewarding and motivating. If you
+              have made something from a tutorial, please feel free to tag me
+              (@paperkawaii) on instagram or twitter.
+            </p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="page-container">
-      <div class="page-constants">
-        <div id="pageConstantsInjection"></div>
+      <div class="page-container">
+        <div class="page-constants">
+          <div id="pageConstantsInjection"></div>
+        </div>
       </div>
     </div>
     <div id="footerInjection"></div>
