--- a/pages/categories.html
+++ b/pages/categories.html
@@ -57,23 +57,25 @@
         </div>
       </div>
     </nav>
-    <div id="logoInjection"></div>
-    <div class="page-container">
-      <div class="page-width">
-        <h1>Paper Kawaii - Origami & Paper Craft Tutorials</h1>
-        <p>
-          There are endless categories but for convenience we listed as many
-          popular ones as we could ♥
-        </p>
-        <h2>Origami Categories</h2>
-        <div class="categories">
-          <div id="categoryInjection"></div>
+    <div class="main" role="main">
+      <div id="logoInjection"></div>
+      <div class="page-container">
+        <div class="page-width">
+          <h1>Paper Kawaii - Origami & Paper Craft Tutorials</h1>
+          <p>
+            There are endless categories but for convenience we listed as many
+            popular ones as we could ♥
+          </p>
+          <h2>Origami Categories</h2>
+          <div class="categories">
+            <div id="categoryInjection"></div>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="page-container">
-      <div class="page-constants">
-        <div id="pageConstantsInjection"></div>
+      <div class="page-container">
+        <div class="page-constants">
+          <div id="pageConstantsInjection"></div>
+        </div>
       </div>
     </div>
     <div id="footerInjection"></div>
