--- a/pages/paper-kawaii.html
+++ b/pages/paper-kawaii.html
@@ -53,77 +53,89 @@
         </div>
       </div>
     </nav>
-    <div id="logoInjection"></div>
-    <div class="modal-overlay in" id="myModal">
-      <div class="modal-wrapper">
-        <h1>My Reimagined Copy of Paper Kawaii</h1>
-        <div class="modal-content">
-          Hello and welcome. I've based this project off of the Paper Kawaii
-          website because I like origami and they have a lot of content. I'm
-          just showcasing lighlty some of my Frontend abilities. Links here
-          either redirect to the actual Paper Kawaii site, another of page
-          example or to my LinkedIn profile. Happy viewing!
-        </div>
-        <div class="close-btn-wrapper">
-          <button class="close-modal-btn">Close</button>
-        </div>
-      </div>
-    </div>
-    <div class="page-container">
-      <div class="page-width">
-        <h1>Origami & Paper Craft Tutorials</h1>
-        <p>
-          Here at Paper Kawaii you’ll find origami instructions, diagrams, photo
-          & video tutorials. Learn how to make cute origami boxes, envelopes,
-          flowers, books, bows, hearts, animals, stars, & more. ♥
-        </p>
-        <div class="first-carousel">
-          <button
-            class="first-carousel-buttons"
-            id="left"
-            aria-label="previous"
-            role="button"
-          >
-            <svg width="20" fill="#ff7bac" height="20" viewBox="0 -38 256 512">
-              <path
-                d="m31.7 239 136-136a23.9 23.9 0 0 1 33.9 0l22.6 22.6a23.9 23.9 0 0 1 0 33.9L127.9 256l96.4 96.4a23.9 23.9 0 0 1 0 33.9L201.7 409a23.9 23.9 0 0 1-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
-              />
-            </svg>
-          </button>
-          <div class="slider">
-            <div id="sliderInjection"></div>
+    <div class="main" role="main">
+      <div id="logoInjection"></div>
+      <div class="modal-overlay in" id="myModal">
+        <div class="modal-wrapper">
+          <h1>My Reimagined Copy of Paper Kawaii</h1>
+          <div class="modal-content">
+            Hello and welcome. I've based this project off of the Paper Kawaii
+            website because I like origami and they have a lot of content. I'm
+            just showcasing lighlty some of my Frontend abilities. Links here
+            either redirect to the actual Paper Kawaii site, another of page
+            example or to my LinkedIn profile. Happy viewing!
           </div>
-          <button
-            class="first-carousel-buttons"
-            id="right"
-            aria-label="next"
-            role="button"
-          >
-            <svg width="20" fill="#ff7bac" height="20" viewBox="0 -38 256 512">
-              <path
-                d="m224.3 273-136 136a23.9 23.9 0 0 1-33.9 0l-22.6-22.6a23.9 23.9 0 0 1 0-33.9l96.4-96.4-96.4-96.4a23.9 23.9 0 0 1 0-33.9L54.3 103a23.9 23.9 0 0 1 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
-              />
-            </svg>
-          </button>
-        </div>
-        <h1>Popular Origami Tutorials</h1>
-        <div class="popular-container">
-          <div class="second-carousel">
-            <div id="popularInjection"></div>
-          </div>
-        </div>
-        <h1>Recently Added @ Paper Kawaii:</h1>
-        <div class="recently-added-container">
-          <div class="third-carousel">
-            <div id="recentlyInjection"></div>
+          <div class="close-btn-wrapper">
+            <button class="close-modal-btn">Close</button>
           </div>
         </div>
       </div>
-    </div>
-    <div class="page-container">
-      <div class="page-width">
-        <div class="page-constants">
-          <div id="pageConstantsInjection"></div>
+      <div class="page-container">
+        <div class="page-width">
+          <h1>Origami & Paper Craft Tutorials</h1>
+          <p>
+            Here at Paper Kawaii you’ll find origami instructions, diagrams,
+            photo & video tutorials. Learn how to make cute origami boxes,
+            envelopes, flowers, books, bows, hearts, animals, stars, & more. ♥
+          </p>
+          <div class="first-carousel">
+            <button
+              class="first-carousel-buttons"
+              id="left"
+              aria-label="previous"
+              role="button"
+            >
+              <svg
+                width="20"
+                fill="#ff7bac"
+                height="20"
+                viewBox="0 -38 256 512"
+              >
+                <path
+                  d="m31.7 239 136-136a23.9 23.9 0 0 1 33.9 0l22.6 22.6a23.9 23.9 0 0 1 0 33.9L127.9 256l96.4 96.4a23.9 23.9 0 0 1 0 33.9L201.7 409a23.9 23.9 0 0 1-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
+                />
+              </svg>
+            </button>
+            <div class="slider">
+              <div id="sliderInjection"></div>
+            </div>
+            <button
+              class="first-carousel-buttons"
+              id="right"
+              aria-label="next"
+              role="button"
+            >
+              <svg
+                width="20"
+                fill="#ff7bac"
+                height="20"
+                viewBox="0 -38 256 512"
+              >
+                <path
+                  d="m224.3 273-136 136a23.9 23.9 0 0 1-33.9 0l-22.6-22.6a23.9 23.9 0 0 1 0-33.9l96.4-96.4-96.4-96.4a23.9 23.9 0 0 1 0-33.9L54.3 103a23.9 23.9 0 0 1 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
+                />
+              </svg>
+            </button>
+          </div>
+          <h1>Popular Origami Tutorials</h1>
+          <div class="popular-container">
+            <div class="second-carousel">
+              <div id="popularInjection"></div>
+            </div>
+          </div>
+          <h1>Recently Added @ Paper Kawaii:</h1>
+          <div class="recently-added-container">
+            <div class="third-carousel">
+              <div id="recentlyInjection"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="page-container">
+        <div class="page-width">
+          <div class="page-constants">
+            <div id="pageConstantsInjection"></div>
+          </div>
         </div>
       </div>
     </div>
