--- a/pages/shop.html
+++ b/pages/shop.html
@@ -53,52 +53,56 @@
         </div>
       </div>
     </nav>
-    <div id="logoInjection"></div>
-    <div class="page-container">
-      <div class="page-width">
-        <h2>Origami Shop</h2>
-        <p>
-          You can find origami ebooks, diagrams and printable origami papers in
-          my online shop, below you can see some of the most recent additions.
-          Each diagram and ebook has an accompanying video tutorial.
-        </p>
-        <h2>Ebooks</h2>
-        <div class="ebooks-fancy-expand">
-          <div class="options">
-            <div id="optionInjection"></div>
-          </div>
-        </div>
-        <h2>Kawaii Origami Book</h2>
-        <div class="origami-book">
-          <div class="book-image">
-            <img
-              src="https://jwright2021.github.io/workingPortfolio/images/kawaii-origami-book-paper-kawaii-08-440x440-1.jpg"
-              alt="kawaii-origami-book-image"
-            />
-          </div>
-          <div class="book-description">
-            <h3>
-              Kawaii Origami - Super Cute Origami Projects for Easy Folding Fun
-            </h3>
-            <p>
-              Grab a copy of my new origami book, with over 25 cute origami
-              projects as well as a pack of 50 origami papers.
-            </p>
-            <div class="origami-book-buttons">
-              <button class="origami-buttons">More Info</button>
-              <button class="origami-buttons">Buy Now</button>
+    <div class="main" role="main">
+      <div id="logoInjection"></div>
+      <div class="page-container">
+        <div class="page-width">
+          <h2>Origami Shop</h2>
+          <p>
+            You can find origami ebooks, diagrams and printable origami papers
+            in my online shop, below you can see some of the most recent
+            additions. Each diagram and ebook has an accompanying video
+            tutorial.
+          </p>
+          <h2>Ebooks</h2>
+          <div class="ebooks-fancy-expand">
+            <div class="options">
+              <div id="optionInjection"></div>
             </div>
           </div>
-        </div>
-        <h2>Most Recent Diagrams</h2>
-        <div class="diagrams-container">
-          <div id="diagramsInjection"></div>
+          <h2>Kawaii Origami Book</h2>
+          <div class="origami-book">
+            <div class="book-image">
+              <img
+                src="https://jwright2021.github.io/workingPortfolio/images/kawaii-origami-book-paper-kawaii-08-440x440-1.jpg"
+                alt="kawaii-origami-book-image"
+              />
+            </div>
+            <div class="book-description">
+              <h3>
+                Kawaii Origami - Super Cute Origami Projects for Easy Folding
+                Fun
+              </h3>
+              <p>
+                Grab a copy of my new origami book, with over 25 cute origami
+                projects as well as a pack of 50 origami papers.
+              </p>
+              <div class="origami-book-buttons">
+                <button class="origami-buttons">More Info</button>
+                <button class="origami-buttons">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <h2>Most Recent Diagrams</h2>
+          <div class="diagrams-container">
+            <div id="diagramsInjection"></div>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="page-container">
-      <div class="page-constants">
-        <div id="pageConstantsInjection"></div>
+      <div class="page-container">
+        <div class="page-constants">
+          <div id="pageConstantsInjection"></div>
+        </div>
       </div>
     </div>
     <div id="footerInjection"></div>
