update  style link

--- a/pages/demo.html
+++ b/pages/demo.html
@@ -2,7 +2,11 @@
 <html>
   <head>
     <title>CSS3 Perspective Playground</title>
-    <link rel="stylesheet" type="text/css" href="main.css" />
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="https://jwright2021.github.io/workingPortfolio/styles/demo-style.css"
+    />
   </head>
 
   <body>
