--- a/pages/team-generator.html
+++ b/pages/team-generator.html
@@ -7,10 +7,13 @@
       rel="stylesheet"
       href="https://jwright2021.github.io/workingPortfolio/styles/team-generator-style.css"
     />
-    <script
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <!-- <script
       src="https://jwright2021.github.io/workingPortfolio/scripts/team-generator-script.js"
       defer
-    ></script>
+    ></script> -->
+    <!-- Local development -->
+    <script src="/scripts/team-generator-script.js" defer></script>
   </head>
 
   <body>
@@ -21,7 +24,5 @@
         <v-card>This is a test</v-card>
       </main>
     </div>
-    <script src="https://unpkg.com/vue@next"></script>
-    <script src="app.js"></script>
   </body>
 </html>
