--- a/pages/demo.html
+++ b/pages/demo.html
@@ -2,11 +2,10 @@
 <html>
   <head>
     <title>CSS3 Perspective Playground</title>
-    <link
-      type="text/css"
-      rel="stylesheet"
-      href="https://jwright2021.github.io/workingPortfolio/styles/demo-style.css"
-    />
+    <script src="https://unpkg.com/css-doodle@0.6.1/css-doodle.min.js"></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <!-- <script src="/scripts/demo-script.js" defer></script> -->
+    <script src="https://jwright2021.github.io/workingPortfolio/scripts/demo-script.js"></script>
   </head>
 
   <body>
@@ -15,25 +14,25 @@
       <main>
         <section class="settings">
           <div class="settings-container">
-            <label>perspective: 0px;</label>
-            <input type="range" min="0" max="999" />
+            <label>perspective: {{perspective}}px;</label>
+            <input type="range" min="0" max="999" v-model="perspective" />
 
-            <label>rotateX: 0deg; </label>
-            <input type="range" min="-180" max="180" />
+            <label>rotateX: {{rotateX}}deg; </label>
+            <input type="range" min="-180" max="180" v-model="rotateX" />
 
-            <label>rotateY: 0deg; </label>
-            <input type="range" min="-180" max="180" />
+            <label>rotateY: {{rotateY}}deg; </label>
+            <input type="range" min="-180" max="180" v-model="rotateY" />
 
-            <label>rotateZ: 0deg; </label>
-            <input type="range" min="-180" max="180" />
+            <label>rotateZ: {{rotateZ}}deg; </label>
+            <input type="range" min="-180" max="180" v-model="rotateZ" />
 
-            <button type="button">Reset</button>
-            <button type="button">Copy</button>
+            <button type="button" @click.prevent="reset">Reset</button>
+            <button type="button" @click.prevent="copy">Copy</button>
           </div>
         </section>
         <section class="output">
           <div class="box-container">
-            <div class="box"></div>
+            <div class="box" :style="box"></div>
           </div>
         </section>
       </main>
@@ -48,9 +47,5 @@
       calc(-50s / @size() * @i()) infinite; @keyframes f { from { transform:
       translateY(-100%) } to { transform: translateY(100%) } }
     </css-doodle>
-
-    <script src="https://unpkg.com/css-doodle@0.6.1/css-doodle.min.js"></script>
-    <script src="https://unpkg.com/vue@next"></script>
-    <script src="app.js"></script>
   </body>
 </html>
