--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <li><a class="headNav" href="#About">About</a></li>
       </ul>
     </nav>
+    <p>Test View</p>
     <div id="baseInjection"></div>
   </body>
 </html>
