Testing broken links

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       rel="icon"
       href="https://jwright2021.github.io/workingPortfolio/images/myIcon.png"
     />
+    <!-- PROD ENV  -->
     <link
       type="text/css"
       rel="stylesheet"
@@ -20,7 +21,7 @@
       src="https://jwright2021.github.io/workingPortfolio/scripts/homepage.js"
       defer
     ></script>
-    <!-- Local development -->
+    <!-- LOCAL ENV -->
     <!-- <link type="text/css" rel="stylesheet" href="styles/homepage.css" />
     <script src="scripts/homepage.js" defer></script> -->
     <title>Jenna Wright</title>
@@ -41,7 +42,6 @@
         <li><a class="headNav" href="#About">About</a></li>
       </ul>
     </nav>
-    <p>Test View</p>
     <div id="baseInjection"></div>
   </body>
 </html>
