Update to new cert url

--- a/index.html
+++ b/index.html
@@ -7,18 +7,15 @@
       name="description"
       content="Landing page of Jenna Wright's Portfolio."
     />
-    <link
-      rel="icon"
-      href="https://jwright2021.github.io/workingPortfolio/images/myIcon.png"
-    />
+    <link rel="icon" href="https://www.meetjennawright.com/images/myIcon.png" />
     <!-- PROD ENV  -->
     <link
       type="text/css"
       rel="stylesheet"
-      href="https://jwright2021.github.io/workingPortfolio/styles/homepage.css"
+      href="https://www.meetjennawright.com/styles/homepage.css"
     />
     <script
-      src="https://jwright2021.github.io/workingPortfolio/scripts/homepage.js"
+      src="https://www.meetjennawright.com/scripts/homepage.js"
       defer
     ></script>
     <!-- LOCAL ENV -->
@@ -31,7 +28,7 @@
     <nav class="navigation-links" role="navigation">
       <label class="logo"
         ><img
-          src="https://jwright2021.github.io/workingPortfolio/images/myIcon.png"
+          src="https://www.meetjennawright.com/images/myIcon.png"
           alt="JennaWrightLogo"
       /></label>
       <button class="menu-toggle" aria-label="Toggle navigation">
