--- a/pages/demo.html
+++ b/pages/demo.html
@@ -5,7 +5,7 @@
     <script src="https://unpkg.com/css-doodle@0.6.1/css-doodle.min.js"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <!-- <script src="/scripts/demo-script.js" defer></script> -->
-    <script src="https://jwright2021.github.io/workingPortfolio/scripts/demo-script.js"></script>
+    <script src="https://www.meetjennawright.com/scripts/demo-script.js"></script>
   </head>
 
   <body>
