--- a/pages/paper-kawaii.html
+++ b/pages/paper-kawaii.html
@@ -9,24 +9,24 @@
     />
     <link
       rel="icon"
-      href="https://jwright2021.github.io/workingPortfolio/images/origami-cropped-favicon-1.png"
+      href="https://www.meetjennawright.com/images/origami-cropped-favicon-1.png"
     />
     <link
       type="text/css"
       rel="stylesheet"
-      href="https://jwright2021.github.io/workingPortfolio/styles/style.css"
+      href="https://www.meetjennawright.com/styles/style.css"
     />
     <link
       type="text/css"
       rel="stylesheet"
-      href="https://jwright2021.github.io/workingPortfolio/styles/index-style.css"
+      href="https://www.meetjennawright.com/styles/index-style.css"
     />
     <script
-      src="https://jwright2021.github.io/workingPortfolio/scripts/script.js"
+      src="https://www.meetjennawright.com/scripts/script.js"
       defer
     ></script>
     <script
-      src="https://jwright2021.github.io/workingPortfolio/scripts/index-script.js"
+      src="https://www.meetjennawright.com/scripts/index-script.js"
       defer
     ></script>
     <!-- Local development -->
