--- a/pages/shop.html
+++ b/pages/shop.html
@@ -9,24 +9,24 @@
     />
     <link
       rel="icon"
-      href="https://jwright2021.github.io/workingPortfolio/images/origami-cropped-favicon-1.png"
+      href="https://www.meetjennawright.com/images/origami-cropped-favicon-1.png"
     />
     <link
       type="text/css"
       rel="stylesheet"
-      href="https://jwright2021.github.io/workingPortfolio/styles/style.css"
+      href="https://www.meetjennawright.com/styles/style.css"
     />
     <link
       type="text/css"
       rel="stylesheet"
-      href="https://jwright2021.github.io/workingPortfolio/styles/shop-style.css"
+      href="https://www.meetjennawright.com/styles/shop-style.css"
     />
     <script
-      src="https://jwright2021.github.io/workingPortfolio/scripts/script.js"
+      src="https://www.meetjennawright.com/scripts/script.js"
       defer
     ></script>
     <script
-      src="https://jwright2021.github.io/workingPortfolio/scripts/shop-script.js"
+      src="https://www.meetjennawright.com/scripts/shop-script.js"
       defer
     ></script>
     <!-- Local development  -->
@@ -74,7 +74,7 @@
           <div class="origami-book">
             <div class="book-image">
               <img
-                src="https://jwright2021.github.io/workingPortfolio/images/kawaii-origami-book-paper-kawaii-08-440x440-1.jpg"
+                src="https://www.meetjennawright.com/images/kawaii-origami-book-paper-kawaii-08-440x440-1.jpg"
                 alt="kawaii-origami-book-image"
               />
             </div>
