--- a/pages/team-generator.html
+++ b/pages/team-generator.html
@@ -5,11 +5,11 @@
     <link
       type="text/css"
       rel="stylesheet"
-      href="https://jwright2021.github.io/workingPortfolio/styles/team-generator-style.css"
+      href="https://www.meetjennawright.com/styles/team-generator-style.css"
     />
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <!-- <script
-      src="https://jwright2021.github.io/workingPortfolio/scripts/team-generator-script.js"
+      src="https://www.meetjennawright.com/scripts/team-generator-script.js"
       defer
     ></script> -->
     <!-- Local development -->
